--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,11 +35,11 @@ jobs:
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-    - name: Run extract_data.py
-      run: |
-        pwd
-        git pull
-        cd src/data/ && python3 extract_data.py
+    #- name: Run extract_data.py
+    #  run: |
+    #    pwd
+    #    git pull
+    #    cd src/data/ && python3 extract_data.py
     - name: Commit files
       run: |
         git config --local user.email "action@github.com"
