--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: UPDATE-INDEX
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   workflow_dispatch:      
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -19,7 +19,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - name: Checkout master
+    - name: Checkout main
       uses: actions/checkout@v2
       with:
         persist-credentials: true
@@ -31,7 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
@@ -46,7 +46,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git status | grep "nothing to commit" && echo "Nothing to commit." || git commit -m "Auto-update index" -a
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@main
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
   deploy: 
@@ -69,13 +69,13 @@ jobs:
         echo SSH agent started
         ssh-add ~/.ssh/id_rsa
         ssh-keyscan -H 'github.com' >> ~/.ssh/known_hosts
-    - name: Checkout master
+    - name: Checkout main
       uses: actions/checkout@v2
       with:
         ssh-key: ${{secrets.DEPLOY_AGENT_PRIVATE_KEY}}
         fetch-depth: 0
-        ref: master
-      #uses: actions/checkout@master 
+        ref: main
+      #uses: actions/checkout@main 
       #with:
       #  persist-credentials: false 
       #  fetch-depth: 0
