--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         git config --local user.name "GitHub Action"
         git status | grep "nothing to commit" && echo "Nothing to commit." || git commit -m "Auto-update index" -a
     - name: Push changes
-      uses: ad-m/github-push-action@main
+      uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
   deploy: 
