--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.6.1",
+    "node-gyp": "^9.0.0",
     "d3": "^6.7.0",
     "eslint-plugin-prettier": "^3.4.1",
     "node-sass": "^4.14.1",
