--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "veridark_benchmark",
-  "homepage": "https://veridark.github.io/",
+  "homepage":"https://veridark.github.io/",
+  "proxy": "http://localhost:3000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,19 +9,19 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.6",
     "bootstrap": "^5.1.3",
-    "sass-loader": "^13",
-    "node-gyp": "^9.1.0",
     "d3": "^7.6.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "html-react-parser": "^3.0.1",
+    "node-gyp": "^9.1.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
-    "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "sass-loader": "^13",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
