--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "veridark_benchmark",
-  "homepage":"https://veridark.github.io/",
+  "homepage": ".",
   "proxy": "http://localhost:3000",
   "version": "0.1.0",
   "private": true,
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^14.2.6",
     "bootstrap": "^5.1.3",
     "d3": "^7.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
     "html-react-parser": "^3.0.1",
     "node-gyp": "^9.1.0",
     "node-sass": "^7.0.1",
@@ -32,9 +31,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -54,8 +50,9 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^6.12.0",
     "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "gh-pages": "^4.0.0",
     "prettier": "^2.7.1"
   }
