--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webfontloader": "^1.6.28"
   },
   "scripts": {
+    "preinstall":"cd /home/runner/work/veridark.github.io/veridark.github.io/",
     "predeploy": "npm run build --prefix /home/runner/work/veridark.github.io/veridark.github.io/",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
