--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "preinstall":"cd /home/runner/work/veridark.github.io/veridark.github.io/",
     "predeploy": "npm run build --prefix /home/runner/work/veridark.github.io/veridark.github.io/",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
