--- a/.github/workflows/main_backup.yml
+++ b/.github/workflows/main_backup.yml
@@ -86,4 +86,8 @@ jobs:
     - name: Install npm dependencies
       run: npm install
     - name: Deploy
-      run: echo $(pwd) && npm run deploy
+      run: |
+        git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+        echo $(pwd) && npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
