--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: "gh-pages"
   deploy: 
     runs-on: ubuntu-latest 
     needs: [build]
@@ -74,7 +75,7 @@ jobs:
       with:
         ssh-key: ${{secrets.DEPLOY_AGENT_PRIVATE_KEY}}
         fetch-depth: 0
-        ref: master
+        ref: main
       #uses: actions/checkout@main 
       #with:
       #  persist-credentials: false 
