--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,6 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: "gh-pages"
   deploy: 
     runs-on: ubuntu-latest 
     needs: [build]
@@ -84,6 +83,10 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+    - name: Remove package-lock.json
+      run: rm package-lock.json
+    - name: Remove node_modules
+      run: rm -rf node_modules
     - name: Install npm dependencies
       run: npm install
     - name: Deploy
